<resources>
    <string name="app_name">Mood Music</string>
    <string name="time">Time of Day</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="song_button">Find Song</string>
    <string name="weekday">Day of Week</string>
    <string name="mood">Mood</string>
    <string-array name="day">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="season">Season</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="marvinsroom">Marvins Room</string>
    <string name="drake">Drake</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="relaxed">Relaxed</string>
    <string name="angry">Angry</string>

</resources>
